--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "sugar": "~1.3.8",
     "underscore": "~1.4.4",
     "request": "~2.21.0",
-    "optimist": "~0.6.0"
+    "optimist": "~0.6.0",
+    "async": "~0.2.9",
+    "colors": "~0.6.0-1",
+    "yetify": "0.0.1"
   }
 }
