--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tumble-bumble",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "author": {
     "name": "Aaron McCall",
     "email": "aaron@andyet.net"  
@@ -19,6 +19,7 @@
     "optimist": "~0.6.0",
     "async": "~0.2.9",
     "colors": "~0.6.0-1",
-    "yetify": "0.0.1"
+    "yetify": "0.0.1",
+    "oembed": "~0.1"
   }
 }
