--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "colors": "~0.6.0-1",
     "yetify": "0.0.1",
     "oembed": "~0.1",
-    "hyperquest": "~0.1.7"
+    "hyperquest": "~0.1.7",
+    "js-yaml": "~2.1.0"
   }
 }
